# GabeNTrader

./: .clang-format  .gitignore  CMakeLists.txt  build.and.launch.bat  build.and.launch.sh  build.bat  build.sh  cookie.py  generate.cmake.bat  get.py  main.py
scripts/: call_batch_same_name.sh  helpers.sh
src/: bar.cpp  cookie.py  data.py  emoji.py  foo.cxx  gui.cpp  gui.hpp  gui.py  init.cpp  init.hpp  instances.py  main.cpp  main2.cxx  moduletest.cxx  network.py  remoteimages.py  steam.py  utils.py  widgets.py
utils/: common.py  sqlite2csv.py
